@@ -2,15 +2,18 @@ Updates in v0.6.3
 NOISE
 1. Removed ncomp in do_correlation(). Setup a warning message if old usage is used.
 2. Change defaults for acorr_only and xcorr_only both to False in do_correlation().
+3. Added option to stack in merging(). This option could replace do_stacking() if no
+  rotation.
+4. Updated extract_corrdata() to read "side" attribute if available.
 
 DOWNLOADERS
 1. Return inventory in get_event_waveforms()
-2. Drop duplicates in get_sta_list().
+2. Drop duplicates in get_sta_list() and fixed minor bug when channels might be skipped.
 3. Change default region to globe in get_events()
 
 UTILS
 1. Added mag_duration(), modified from obspyDMT.utils.event_handler.py
-2. Renamed qml_to_event_list() to qml2list(). Added option to conver to pandas dataframe.
+2. Renamed qml_to_event_list() to qml2list(). Added option to convert to pandas dataframe.
 3. Fixed a bug in slicing_trace(), where the index was float instead of integer.
 
 PLOTTING
